APIs/googleapis.com/adexchangebuyer/v1.3/java-client/README.md
# openapi-java-client

Ad Exchange Buyer API
- API version: v1.3
  - Build date: 2024-10-12T11:30:40.731455-04:00[America/New_York]
  - Generator version: 7.9.0

Accesses your bidding-account information, submits creatives for validation, finds available direct deals, and retrieves performance reports.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v1.3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v1.3"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v1.3.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AccountsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://www.googleapis.com/adexchangebuyer/v1.3");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AccountsApi apiInstance = new AccountsApi(defaultClient);
    Integer id = 56; // Integer | The account id
    String alt = "json"; // String | Data format for the response.
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | An opaque string that represents a user for quota purposes. Must not exceed 40 characters.
    String userIp = "userIp_example"; // String | Deprecated. Please use quotaUser instead.
    try {
      Account result = apiInstance.adexchangebuyerAccountsGet(id, alt, fields, key, oauthToken, prettyPrint, quotaUser, userIp);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AccountsApi#adexchangebuyerAccountsGet");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/adexchangebuyer/v1.3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**adexchangebuyerAccountsGet**](docs/AccountsApi.md#adexchangebuyerAccountsGet) | **GET** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyerAccountsList**](docs/AccountsApi.md#adexchangebuyerAccountsList) | **GET** /accounts | 
*AccountsApi* | [**adexchangebuyerAccountsPatch**](docs/AccountsApi.md#adexchangebuyerAccountsPatch) | **PATCH** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyerAccountsUpdate**](docs/AccountsApi.md#adexchangebuyerAccountsUpdate) | **PUT** /accounts/{id} | 
*BillingInfoApi* | [**adexchangebuyerBillingInfoGet**](docs/BillingInfoApi.md#adexchangebuyerBillingInfoGet) | **GET** /billinginfo/{accountId} | 
*BillingInfoApi* | [**adexchangebuyerBillingInfoList**](docs/BillingInfoApi.md#adexchangebuyerBillingInfoList) | **GET** /billinginfo | 
*BudgetApi* | [**adexchangebuyerBudgetGet**](docs/BudgetApi.md#adexchangebuyerBudgetGet) | **GET** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyerBudgetPatch**](docs/BudgetApi.md#adexchangebuyerBudgetPatch) | **PATCH** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyerBudgetUpdate**](docs/BudgetApi.md#adexchangebuyerBudgetUpdate) | **PUT** /billinginfo/{accountId}/{billingId} | 
*CreativesApi* | [**adexchangebuyerCreativesGet**](docs/CreativesApi.md#adexchangebuyerCreativesGet) | **GET** /creatives/{accountId}/{buyerCreativeId} | 
*CreativesApi* | [**adexchangebuyerCreativesInsert**](docs/CreativesApi.md#adexchangebuyerCreativesInsert) | **POST** /creatives | 
*CreativesApi* | [**adexchangebuyerCreativesList**](docs/CreativesApi.md#adexchangebuyerCreativesList) | **GET** /creatives | 
*DirectDealsApi* | [**adexchangebuyerDirectDealsGet**](docs/DirectDealsApi.md#adexchangebuyerDirectDealsGet) | **GET** /directdeals/{id} | 
*DirectDealsApi* | [**adexchangebuyerDirectDealsList**](docs/DirectDealsApi.md#adexchangebuyerDirectDealsList) | **GET** /directdeals | 
*PerformanceReportApi* | [**adexchangebuyerPerformanceReportList**](docs/PerformanceReportApi.md#adexchangebuyerPerformanceReportList) | **GET** /performancereport | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigDelete**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigDelete) | **DELETE** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigGet**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigGet) | **GET** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigInsert**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigInsert) | **POST** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigList**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigList) | **GET** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigPatch**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigPatch) | **PATCH** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigUpdate**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigUpdate) | **PUT** /pretargetingconfigs/{accountId}/{configId} | 


## Documentation for Models

 - [Account](docs/Account.md)
 - [AccountBidderLocationInner](docs/AccountBidderLocationInner.md)
 - [AccountsList](docs/AccountsList.md)
 - [BillingInfo](docs/BillingInfo.md)
 - [BillingInfoList](docs/BillingInfoList.md)
 - [Budget](docs/Budget.md)
 - [Creative](docs/Creative.md)
 - [CreativeAdTechnologyProviders](docs/CreativeAdTechnologyProviders.md)
 - [CreativeCorrectionsInner](docs/CreativeCorrectionsInner.md)
 - [CreativeDisapprovalReasonsInner](docs/CreativeDisapprovalReasonsInner.md)
 - [CreativeFilteringReasons](docs/CreativeFilteringReasons.md)
 - [CreativeFilteringReasonsReasonsInner](docs/CreativeFilteringReasonsReasonsInner.md)
 - [CreativeNativeAd](docs/CreativeNativeAd.md)
 - [CreativeNativeAdAppIcon](docs/CreativeNativeAdAppIcon.md)
 - [CreativeNativeAdImage](docs/CreativeNativeAdImage.md)
 - [CreativeNativeAdLogo](docs/CreativeNativeAdLogo.md)
 - [CreativesList](docs/CreativesList.md)
 - [DirectDeal](docs/DirectDeal.md)
 - [DirectDealsList](docs/DirectDealsList.md)
 - [PerformanceReport](docs/PerformanceReport.md)
 - [PerformanceReportList](docs/PerformanceReportList.md)
 - [PretargetingConfig](docs/PretargetingConfig.md)
 - [PretargetingConfigDimensionsInner](docs/PretargetingConfigDimensionsInner.md)
 - [PretargetingConfigExcludedPlacementsInner](docs/PretargetingConfigExcludedPlacementsInner.md)
 - [PretargetingConfigList](docs/PretargetingConfigList.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/adexchange.buyer: Manage your Ad Exchange buyer account configuration

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/adexchange.buyer: Manage your Ad Exchange buyer account configuration


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



