APIs/googleapis.com/adexchangebuyer/v1.4/java-client/README.md
# openapi-java-client

Ad Exchange Buyer API
- API version: v1.4
  - Build date: 2024-10-12T11:30:44.175931-04:00[America/New_York]
  - Generator version: 7.9.0

Accesses your bidding-account information, submits creatives for validation, finds available direct deals, and retrieves performance reports.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v1.4</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v1.4"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v1.4.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AccountsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://www.googleapis.com/adexchangebuyer/v1.4");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AccountsApi apiInstance = new AccountsApi(defaultClient);
    Integer id = 56; // Integer | The account id
    String alt = "json"; // String | Data format for the response.
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | An opaque string that represents a user for quota purposes. Must not exceed 40 characters.
    String userIp = "userIp_example"; // String | Deprecated. Please use quotaUser instead.
    try {
      Account result = apiInstance.adexchangebuyerAccountsGet(id, alt, fields, key, oauthToken, prettyPrint, quotaUser, userIp);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AccountsApi#adexchangebuyerAccountsGet");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/adexchangebuyer/v1.4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**adexchangebuyerAccountsGet**](docs/AccountsApi.md#adexchangebuyerAccountsGet) | **GET** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyerAccountsList**](docs/AccountsApi.md#adexchangebuyerAccountsList) | **GET** /accounts | 
*AccountsApi* | [**adexchangebuyerAccountsPatch**](docs/AccountsApi.md#adexchangebuyerAccountsPatch) | **PATCH** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyerAccountsUpdate**](docs/AccountsApi.md#adexchangebuyerAccountsUpdate) | **PUT** /accounts/{id} | 
*BillingInfoApi* | [**adexchangebuyerBillingInfoGet**](docs/BillingInfoApi.md#adexchangebuyerBillingInfoGet) | **GET** /billinginfo/{accountId} | 
*BillingInfoApi* | [**adexchangebuyerBillingInfoList**](docs/BillingInfoApi.md#adexchangebuyerBillingInfoList) | **GET** /billinginfo | 
*BudgetApi* | [**adexchangebuyerBudgetGet**](docs/BudgetApi.md#adexchangebuyerBudgetGet) | **GET** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyerBudgetPatch**](docs/BudgetApi.md#adexchangebuyerBudgetPatch) | **PATCH** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyerBudgetUpdate**](docs/BudgetApi.md#adexchangebuyerBudgetUpdate) | **PUT** /billinginfo/{accountId}/{billingId} | 
*CreativesApi* | [**adexchangebuyerCreativesAddDeal**](docs/CreativesApi.md#adexchangebuyerCreativesAddDeal) | **POST** /creatives/{accountId}/{buyerCreativeId}/addDeal/{dealId} | 
*CreativesApi* | [**adexchangebuyerCreativesGet**](docs/CreativesApi.md#adexchangebuyerCreativesGet) | **GET** /creatives/{accountId}/{buyerCreativeId} | 
*CreativesApi* | [**adexchangebuyerCreativesInsert**](docs/CreativesApi.md#adexchangebuyerCreativesInsert) | **POST** /creatives | 
*CreativesApi* | [**adexchangebuyerCreativesList**](docs/CreativesApi.md#adexchangebuyerCreativesList) | **GET** /creatives | 
*CreativesApi* | [**adexchangebuyerCreativesListDeals**](docs/CreativesApi.md#adexchangebuyerCreativesListDeals) | **GET** /creatives/{accountId}/{buyerCreativeId}/listDeals | 
*CreativesApi* | [**adexchangebuyerCreativesRemoveDeal**](docs/CreativesApi.md#adexchangebuyerCreativesRemoveDeal) | **POST** /creatives/{accountId}/{buyerCreativeId}/removeDeal/{dealId} | 
*MarketplacedealsApi* | [**adexchangebuyerMarketplacedealsDelete**](docs/MarketplacedealsApi.md#adexchangebuyerMarketplacedealsDelete) | **POST** /proposals/{proposalId}/deals/delete | 
*MarketplacedealsApi* | [**adexchangebuyerMarketplacedealsInsert**](docs/MarketplacedealsApi.md#adexchangebuyerMarketplacedealsInsert) | **POST** /proposals/{proposalId}/deals/insert | 
*MarketplacedealsApi* | [**adexchangebuyerMarketplacedealsList**](docs/MarketplacedealsApi.md#adexchangebuyerMarketplacedealsList) | **GET** /proposals/{proposalId}/deals | 
*MarketplacedealsApi* | [**adexchangebuyerMarketplacedealsUpdate**](docs/MarketplacedealsApi.md#adexchangebuyerMarketplacedealsUpdate) | **POST** /proposals/{proposalId}/deals/update | 
*MarketplacenotesApi* | [**adexchangebuyerMarketplacenotesInsert**](docs/MarketplacenotesApi.md#adexchangebuyerMarketplacenotesInsert) | **POST** /proposals/{proposalId}/notes/insert | 
*MarketplacenotesApi* | [**adexchangebuyerMarketplacenotesList**](docs/MarketplacenotesApi.md#adexchangebuyerMarketplacenotesList) | **GET** /proposals/{proposalId}/notes | 
*MarketplaceprivateauctionApi* | [**adexchangebuyerMarketplaceprivateauctionUpdateproposal**](docs/MarketplaceprivateauctionApi.md#adexchangebuyerMarketplaceprivateauctionUpdateproposal) | **POST** /privateauction/{privateAuctionId}/updateproposal | 
*PerformanceReportApi* | [**adexchangebuyerPerformanceReportList**](docs/PerformanceReportApi.md#adexchangebuyerPerformanceReportList) | **GET** /performancereport | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigDelete**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigDelete) | **DELETE** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigGet**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigGet) | **GET** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigInsert**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigInsert) | **POST** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigList**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigList) | **GET** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigPatch**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigPatch) | **PATCH** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyerPretargetingConfigUpdate**](docs/PretargetingConfigApi.md#adexchangebuyerPretargetingConfigUpdate) | **PUT** /pretargetingconfigs/{accountId}/{configId} | 
*ProductsApi* | [**adexchangebuyerProductsGet**](docs/ProductsApi.md#adexchangebuyerProductsGet) | **GET** /products/{productId} | 
*ProductsApi* | [**adexchangebuyerProductsSearch**](docs/ProductsApi.md#adexchangebuyerProductsSearch) | **GET** /products/search | 
*ProposalsApi* | [**adexchangebuyerProposalsGet**](docs/ProposalsApi.md#adexchangebuyerProposalsGet) | **GET** /proposals/{proposalId} | 
*ProposalsApi* | [**adexchangebuyerProposalsInsert**](docs/ProposalsApi.md#adexchangebuyerProposalsInsert) | **POST** /proposals/insert | 
*ProposalsApi* | [**adexchangebuyerProposalsPatch**](docs/ProposalsApi.md#adexchangebuyerProposalsPatch) | **PATCH** /proposals/{proposalId}/{revisionNumber}/{updateAction} | 
*ProposalsApi* | [**adexchangebuyerProposalsSearch**](docs/ProposalsApi.md#adexchangebuyerProposalsSearch) | **GET** /proposals/search | 
*ProposalsApi* | [**adexchangebuyerProposalsSetupcomplete**](docs/ProposalsApi.md#adexchangebuyerProposalsSetupcomplete) | **POST** /proposals/{proposalId}/setupcomplete | 
*ProposalsApi* | [**adexchangebuyerProposalsUpdate**](docs/ProposalsApi.md#adexchangebuyerProposalsUpdate) | **PUT** /proposals/{proposalId}/{revisionNumber}/{updateAction} | 
*PubprofilesApi* | [**adexchangebuyerPubprofilesList**](docs/PubprofilesApi.md#adexchangebuyerPubprofilesList) | **GET** /publisher/{accountId}/profiles | 


## Documentation for Models

 - [Account](docs/Account.md)
 - [AccountBidderLocationInner](docs/AccountBidderLocationInner.md)
 - [AccountsList](docs/AccountsList.md)
 - [AddOrderDealsRequest](docs/AddOrderDealsRequest.md)
 - [AddOrderDealsResponse](docs/AddOrderDealsResponse.md)
 - [AddOrderNotesRequest](docs/AddOrderNotesRequest.md)
 - [AddOrderNotesResponse](docs/AddOrderNotesResponse.md)
 - [BillingInfo](docs/BillingInfo.md)
 - [BillingInfoList](docs/BillingInfoList.md)
 - [Budget](docs/Budget.md)
 - [Buyer](docs/Buyer.md)
 - [ContactInformation](docs/ContactInformation.md)
 - [CreateOrdersRequest](docs/CreateOrdersRequest.md)
 - [CreateOrdersResponse](docs/CreateOrdersResponse.md)
 - [Creative](docs/Creative.md)
 - [CreativeAdTechnologyProviders](docs/CreativeAdTechnologyProviders.md)
 - [CreativeCorrectionsInner](docs/CreativeCorrectionsInner.md)
 - [CreativeCorrectionsInnerContextsInner](docs/CreativeCorrectionsInnerContextsInner.md)
 - [CreativeDealIds](docs/CreativeDealIds.md)
 - [CreativeDealIdsDealStatusesInner](docs/CreativeDealIdsDealStatusesInner.md)
 - [CreativeFilteringReasons](docs/CreativeFilteringReasons.md)
 - [CreativeFilteringReasonsReasonsInner](docs/CreativeFilteringReasonsReasonsInner.md)
 - [CreativeNativeAd](docs/CreativeNativeAd.md)
 - [CreativeNativeAdAppIcon](docs/CreativeNativeAdAppIcon.md)
 - [CreativeNativeAdImage](docs/CreativeNativeAdImage.md)
 - [CreativeNativeAdLogo](docs/CreativeNativeAdLogo.md)
 - [CreativeServingRestrictionsInner](docs/CreativeServingRestrictionsInner.md)
 - [CreativeServingRestrictionsInnerContextsInner](docs/CreativeServingRestrictionsInnerContextsInner.md)
 - [CreativeServingRestrictionsInnerDisapprovalReasonsInner](docs/CreativeServingRestrictionsInnerDisapprovalReasonsInner.md)
 - [CreativesList](docs/CreativesList.md)
 - [DealServingMetadata](docs/DealServingMetadata.md)
 - [DealServingMetadataDealPauseStatus](docs/DealServingMetadataDealPauseStatus.md)
 - [DealTerms](docs/DealTerms.md)
 - [DealTermsGuaranteedFixedPriceTerms](docs/DealTermsGuaranteedFixedPriceTerms.md)
 - [DealTermsGuaranteedFixedPriceTermsBillingInfo](docs/DealTermsGuaranteedFixedPriceTermsBillingInfo.md)
 - [DealTermsNonGuaranteedAuctionTerms](docs/DealTermsNonGuaranteedAuctionTerms.md)
 - [DealTermsNonGuaranteedFixedPriceTerms](docs/DealTermsNonGuaranteedFixedPriceTerms.md)
 - [DealTermsRubiconNonGuaranteedTerms](docs/DealTermsRubiconNonGuaranteedTerms.md)
 - [DeleteOrderDealsRequest](docs/DeleteOrderDealsRequest.md)
 - [DeleteOrderDealsResponse](docs/DeleteOrderDealsResponse.md)
 - [DeliveryControl](docs/DeliveryControl.md)
 - [DeliveryControlFrequencyCap](docs/DeliveryControlFrequencyCap.md)
 - [Dimension](docs/Dimension.md)
 - [DimensionDimensionValue](docs/DimensionDimensionValue.md)
 - [EditAllOrderDealsRequest](docs/EditAllOrderDealsRequest.md)
 - [EditAllOrderDealsResponse](docs/EditAllOrderDealsResponse.md)
 - [GetOffersResponse](docs/GetOffersResponse.md)
 - [GetOrderDealsResponse](docs/GetOrderDealsResponse.md)
 - [GetOrderNotesResponse](docs/GetOrderNotesResponse.md)
 - [GetOrdersResponse](docs/GetOrdersResponse.md)
 - [GetPublisherProfilesByAccountIdResponse](docs/GetPublisherProfilesByAccountIdResponse.md)
 - [MarketplaceDeal](docs/MarketplaceDeal.md)
 - [MarketplaceDealParty](docs/MarketplaceDealParty.md)
 - [MarketplaceLabel](docs/MarketplaceLabel.md)
 - [MarketplaceNote](docs/MarketplaceNote.md)
 - [MobileApplication](docs/MobileApplication.md)
 - [PerformanceReport](docs/PerformanceReport.md)
 - [PerformanceReportList](docs/PerformanceReportList.md)
 - [PretargetingConfig](docs/PretargetingConfig.md)
 - [PretargetingConfigDimensionsInner](docs/PretargetingConfigDimensionsInner.md)
 - [PretargetingConfigExcludedPlacementsInner](docs/PretargetingConfigExcludedPlacementsInner.md)
 - [PretargetingConfigList](docs/PretargetingConfigList.md)
 - [PretargetingConfigVideoPlayerSizesInner](docs/PretargetingConfigVideoPlayerSizesInner.md)
 - [Price](docs/Price.md)
 - [PricePerBuyer](docs/PricePerBuyer.md)
 - [PrivateData](docs/PrivateData.md)
 - [Product](docs/Product.md)
 - [Proposal](docs/Proposal.md)
 - [PublisherProfileApiProto](docs/PublisherProfileApiProto.md)
 - [PublisherProvidedForecast](docs/PublisherProvidedForecast.md)
 - [Seller](docs/Seller.md)
 - [SharedTargeting](docs/SharedTargeting.md)
 - [TargetingValue](docs/TargetingValue.md)
 - [TargetingValueCreativeSize](docs/TargetingValueCreativeSize.md)
 - [TargetingValueDayPartTargeting](docs/TargetingValueDayPartTargeting.md)
 - [TargetingValueDayPartTargetingDayPart](docs/TargetingValueDayPartTargetingDayPart.md)
 - [TargetingValueDemogAgeCriteria](docs/TargetingValueDemogAgeCriteria.md)
 - [TargetingValueDemogGenderCriteria](docs/TargetingValueDemogGenderCriteria.md)
 - [TargetingValueRequestPlatformTargeting](docs/TargetingValueRequestPlatformTargeting.md)
 - [TargetingValueSize](docs/TargetingValueSize.md)
 - [UpdatePrivateAuctionProposalRequest](docs/UpdatePrivateAuctionProposalRequest.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/adexchange.buyer: Manage your Ad Exchange buyer account configuration

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/adexchange.buyer: Manage your Ad Exchange buyer account configuration


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



